[gd_scene load_steps=7 format=2]

[ext_resource path="res://Recursos/Enemies/cloud.png" type="Texture" id=1]
[ext_resource path="res://Juego/Enemigos/Nubon.gd" type="Script" id=2]
[ext_resource path="res://Juego/Trampas/Rayo.tscn" type="PackedScene" id=3]
[ext_resource path="res://Recursos/Particles/agua.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Moverse"
length = 12.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6, 9, 12 ),
"transitions": PoolRealArray( 1, 1.62451, 1, 0.659754, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 600, 0 ), Vector2( 0, 0 ), Vector2( -600, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 2
emission_box_extents = Vector3( 6000, 1000, 1 )
flag_disable_z = true
gravity = Vector3( 0, 500, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="Nubon" type="Node2D" groups=[
"Enemigos",
]]
z_index = 50
z_as_relative = false
script = ExtResource( 2 )
rayo = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PosicionesDisparo3" type="Node2D" parent="Sprite"]

[node name="PosicionDisparoIzquierda" type="Position2D" parent="Sprite/PosicionesDisparo3"]
position = Vector2( -50, 15 )

[node name="PosicionDisparoCentro" type="Position2D" parent="Sprite/PosicionesDisparo3"]
position = Vector2( 0, 20 )

[node name="PosicionDisparoDerecha" type="Position2D" parent="Sprite/PosicionesDisparo3"]
position = Vector2( 50, 15 )

[node name="RayCastNivel1" type="RayCast2D" parent="Sprite"]
cast_to = Vector2( 0, 2000 )
collision_mask = 8

[node name="PosicionesDisparo5" type="Node2D" parent="Sprite"]

[node name="PosicionDisparoIzquierda2" type="Position2D" parent="Sprite/PosicionesDisparo5"]
position = Vector2( -100, 10 )

[node name="PosicionDisparoIzquierda" type="Position2D" parent="Sprite/PosicionesDisparo5"]
position = Vector2( -50, 15 )

[node name="PosicionDisparoCentro" type="Position2D" parent="Sprite/PosicionesDisparo5"]
position = Vector2( 0, 20 )

[node name="PosicionDisparoDerecha" type="Position2D" parent="Sprite/PosicionesDisparo5"]
position = Vector2( 50, 15 )

[node name="PosicionDisparoDerecha2" type="Position2D" parent="Sprite/PosicionesDisparo5"]
position = Vector2( 100, 10 )

[node name="RayCastNivel2y3a" type="RayCast2D" parent="Sprite"]
position = Vector2( -50, 0 )
cast_to = Vector2( 0, 800 )
collision_mask = 8

[node name="RayCastNivel2y3b" type="RayCast2D" parent="Sprite"]
position = Vector2( 50, 0 )
cast_to = Vector2( 0, 800 )
collision_mask = 8

[node name="PosicionesDisparo7" type="Node2D" parent="Sprite"]

[node name="PosicionDisparoIzquierda3" type="Position2D" parent="Sprite/PosicionesDisparo7"]
position = Vector2( -90, 10 )

[node name="PosicionDisparoIzquierda2" type="Position2D" parent="Sprite/PosicionesDisparo7"]
position = Vector2( -60, 10 )

[node name="PosicionDisparoIzquierda" type="Position2D" parent="Sprite/PosicionesDisparo7"]
position = Vector2( -30, 15 )

[node name="PosicionDisparoCentro" type="Position2D" parent="Sprite/PosicionesDisparo7"]
position = Vector2( 0, 20 )

[node name="PosicionDisparoDerecha" type="Position2D" parent="Sprite/PosicionesDisparo7"]
position = Vector2( 30, 15 )

[node name="PosicionDisparoDerecha2" type="Position2D" parent="Sprite/PosicionesDisparo7"]
position = Vector2( 60, 10 )

[node name="PosicionDisparoDerecha3" type="Position2D" parent="Sprite/PosicionesDisparo7"]
position = Vector2( 90, 10 )

[node name="RayCastNivel4a" type="RayCast2D" parent="Sprite"]
position = Vector2( -70, 0 )
cast_to = Vector2( 0, 800 )
collision_mask = 8

[node name="RayCastNivel4b" type="RayCast2D" parent="Sprite"]
position = Vector2( 70, 0 )
cast_to = Vector2( 0, 800 )
collision_mask = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath(".")
autoplay = "Moverse"
anims/Moverse = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = "Efectos"

[node name="Fondo" type="Particles2D" parent="."]
scale = Vector2( 0.1, 0.1 )
amount = 80
lifetime = 6.0
randomness = 0.5
process_material = SubResource( 2 )
texture = ExtResource( 5 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
